2009-06-17 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* EndPointListener.cs: call CheckIfRemove() after removing a regular
	prefix. Fixes bug #513849.
	* EndPointManager.cs: make sure we use the right lock when one prefix
	of a collection fails to be added and we need to remove all of the
	prefixes.
	Clear the ip_to_endpoints hashtable if there are no more prefixes
	listening on that address.

2009-06-16 Andrés G. Aragoneses <aaragoneses@novell.com>

	* WebConnection.cs: propagate the exception to the request.
	* WebException.cs: new internal ctor.
	* HttpWebRequest.cs: use new ctor to encapsulate the innerException.
	Fixes #323452.

2009-06-15 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpWebRequest.cs: for unknown methods, always send the request once
	we are connected even if there's no writeStream. Fixes bug #513087.

2009-06-09 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpWebRequest.cs: ProtocolViolationException is not thrown in
	certain cases since 2.0. Fixes bug #508027.

2009-06-09 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpWebRequest.cs: follow MS docs when throwing
	ProtocolViolationException at the beginning of an asynchronous
	operation. Fixes bug #465613.

2009-06-08 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebConnectionStream.cs: throw a WebException instead of an IOException.

2009-06-08 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebRequest.cs: avoid exception when the reply from the server
	contains just response code. Fixes bug #510852.

2009-06-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* DownloadStringCompletedEventArgs.cs: Call RaiseExceptionIfNecessary
	* OpenReadCompletedEventArgs.cs: Remove Address property since it's 
	not part of SL2. Call RaiseExceptionIfNecessary
	* OpenWriteCompletedEventArgs.cs: Call RaiseExceptionIfNecessary
	* UploadStringCompletedEventArgs.cs: Call RaiseExceptionIfNecessary

2009-06-05  Robert Jordan  <robertj@gmx.net>
